--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ pip install fire
 pip install wandb
 pip install accelerate -U
 pip install --upgrade huggingface-hub
+
+pandas~=2.1.2
+numpy~=1.26.1
