--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ pip install fire
 pip install wandb
 pip install accelerate -U
 pip install --upgrade huggingface-hub
+pip install --upgrade transformers
 
 pandas~=2.1.2
 numpy~=1.26.1
